# kairo-private

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/ios/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  CMakePresets.json  Info.plist  MainView.mm  MainView.swift  ViewController.mm  kairo_ios_demo-Bridging-Header.h
cmake/: skia.cmake
core/: CMakeLists.txt  chart.cc  chart.h
docs/: chart_architecture.md  cross_platform_runtime_design.md  ios_metal_rendering.md  ios_public_api.md  public_api_design.md  public_api_industry_proposal.md  step1_ios_demo.md
docs/dev/: vscode.md
platform/ios/: KRChartBridge.h  KRChartBridge.mm  KRChartView.swift
render/: CMakeLists.txt  skia_renderer.cc  skia_renderer.h
scripts/: bootstrap.sh  build_skia_ios_sim.sh  fetch_skia.sh
src/: CMakeLists.txt  CMakePresets.json
src/base/: frame_source.h  invalidation_sink.h  task_runner.h  tick_clock.h  time_types.h  timer.h
src/cmake/: skia.cmake
src/core/: chart.cc  chart.h  chart_controller.cc  chart_controller.h  chart_overlay.h  hit_result.h  layer.h  linear_y_scale.cc  linear_y_scale.h  pane.cc  pane.h  pane_layout.h  range.h  render_context.h  scroll_interaction.cc  scroll_interaction.h  series.h  uniform_bar_x_scale.cc  uniform_bar_x_scale.h  viewport.h  x_scale.h  y_scale.h
src/platform/ios/: KRIOSChartHost.h  KRIOSChartHost.mm  display_link_frame_source.h  display_link_frame_source.mm  ios_metal_chart_renderer.h  ios_metal_chart_renderer.mm  main_run_loop_task_runner.h  main_run_loop_task_runner.mm  system_tick_clock.h  system_tick_clock.mm
src/public/: kchart.cc  kchart.h  kchart_graph.cc  kchart_interaction.cc  kchart_types.h
src/render/: candle_data_source.h  candle_series.cc  candle_series.h  crosshair_layer.cc  crosshair_layer.h  crosshair_overlay.cc  crosshair_overlay.h  demo_chart_factory.cc  demo_chart_factory.h  grid_layer.cc  grid_layer.h  volume_series.cc  volume_series.h
src/runtime/: chart_runtime.cc  chart_runtime.h  runtime_host.h  scroll_animator.cc  scroll_animator.h
